--- a/html/publish/release.html
+++ b/html/publish/release.html
@@ -456,7 +456,7 @@
                     value: subms
                 });
 
-                // console.log(subms)
+                console.log(subms)
                 api.sendEvent({
                     name: 'push_data',
                 });
