remove debug code

--- a/html/index/index.html
+++ b/html/index/index.html
@@ -226,13 +226,13 @@
 <script>
     apiready = function() {
 
-        var apk = api.require('apk');
-        var packageName = apk.getPackageName();
-        var sign = apk.getSign();
-        var v = apk.getVersion();
-        console.log(packageName);
-        console.log(sign);
-        console.log(v);
+        // var apk = api.require('apk');
+        // var packageName = apk.getPackageName();
+        // var sign = apk.getSign();
+        // var v = apk.getVersion();
+        // console.log(packageName);
+        // console.log(sign);
+        // console.log(v);
 
         height()
         appVersion()
