--- a/html/main_win.html
+++ b/html/main_win.html
@@ -167,7 +167,7 @@
                 frames: [{
                         "title": "首页",
                         "name": "tab_frm_1",
-                        "url": "widget://html/index/index.html",
+                        "url": "widget://html/index/index_v2.html",
                         // bounces: true,
                     }, {
                         "title": "任务",
